Bug fix: Overflowing text in the Sync Clippings help dialog

--- a/src/pages/options.css
+++ b/src/pages/options.css
@@ -608,7 +608,7 @@ body[data-os="mac"] #turn-off-sync-clippings-dlg .msgbox-icon {
 }
 
 #sync-clippings-help-dlg .dlg-content {
-    max-height: 406px;
+    max-height: 340px;
     overflow-y: auto;
 }
 
